# LA-CAJA

./: .cursorrules  .gitignore  .mcp.json  .npmrc  AUDIT_MASTER_PLAN.md  BACKEND_IMPLEMENTACION_COMPLETA.md  CACHE_INTELIGENTE.md  CHANGELOG.md  CONFIGURACION_RENDER.md  CONFIGURACION_SISTEMA_REQUERIDA.md  DEPLOY.md  DIAGRAMA_FLUJO_APP.md  EJECUTAR_MIGRACIONES_SUPABASE.md  FIX_DATABASE_URL.md  FIX_OFFLINE_PRODUCTS.md  FIX_OFFLINE_REFRESH.md  FRONTEND-OFFLINE-FIRST.md  FRONTEND_SETUP_COMPLETO.md  IMPORTAR_A_RENDER.md  INSTALL_TESTING.md  MEJORAS_OFFLINE_FIRST.md  ML_NOTIFICATIONS_SETUP.md  NOTAS_DESARROLLO.md  OFFLINE-FIRST-END-TO-END-COMPLETE.md  PLAN_IMPLEMENTACION_SEGURA.md  README.md  RECOMENDACIONES_COMPONENTES_SHADCN.md  REDIS_RENDER_SETUP.md  RENDER_CONFIG.md  RENDER_ENV_VARIABLES.txt  SISTEMA_EFECTIVO_VENEZOLANO.md  SOLUCION_F5_OFFLINE.md  SPRINT10_API.md  SPRINT1_API.md  SPRINT2_API.md  SPRINT3_API.md  SPRINT4_API.md  SPRINT6_API.md  SPRINT8_API.md  SYNC_IMPLEMENTACION_COMPLETA.md  (+26 more)
.claude/: settings.local.json
.cursor/: README.md
.reports/: dead-code-analysis.md  depcheck-report.txt  knip-report.json  knip-report.txt  ts-prune-report.txt
app/: build.gradle
apps/desktop/src-tauri/: Cargo.toml  create-icons.ps1  generate-icons.ps1  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: tailscale.json
apps/desktop/src-tauri/src/: main.rs  sidecar.rs
config/: RENDER_ENV_VARIABLES.txt  netlify.env  render.env  twa-manifest.json
docs/: DELETION_LOG.md  README.md  (+23 more)
(+1699 files in other folders)
