[package]
name = "la-caja-desktop"
version = "1.0.0"
description = "LA CAJA Desktop App"
authors = ["LA CAJA Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "shell-open",
  "fs-all",
  "path-all"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


